[package]
name = "volume-controller-ui"
version = "0.2.1"
authors = ["KrutNA <krutna@pm.me>"]
edition = "2018"

[dependencies]
regex            = "1.3.9"
libpulse-binding = "2.16.0"
iced             = { path = "../../../../.other/iced/" }
iced_native      = { path = "../../../../.other/iced/native/" }
iced_wgpu        = { path = "../../../../.other/iced/wgpu/" }
iced_graphics    = { path = "../../../../.other/iced/graphics/" }
iced_style       = { path = "../../../../.other/iced/style/" }