[package]
name = "volume-controller-ui"
version = "0.2.5"
authors = ["KrutNA <krutna@pm.me>"]
edition = "2018"

[features]
default = []

another_updater = []

### debug features
debug      = [ "time", "iced_debug" ]
time       = []
iced_debug = [ "iced/debug" ]

[dependencies]
pulse            = { version = "2.16.0", package = "libpulse-binding" }
iced             = { path = "../iced/" }
iced_native      = { path = "../iced/native/" }
iced_wgpu        = { path = "../iced/wgpu/" }
iced_graphics    = { path = "../iced/graphics/" }
iced_style       = { path = "../iced/style/" }